# custom_llm

./: .gitignore  README.md  pyproject.toml
custom_llm/: __init__.py  bpe_trainer.py  cli_pretokenize.py  gpt2_pretokenize.py  model.py  pretokenization.py  sample.py  tokenizer.py  train.py
llm/: __init__.py  bpe_trainer.py  cli_pretokenize.py  data.py  sample.py  tokenizer.py  train.py
scripts/: clean_eot_corpus.py  prepare_tinystories.py  run_colab_train.py  train_backup_sample.py  train_tokenizer.py
tests/: test_pretokenization.py
tokenizer/: tokenizer.json
