[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "custom-llm"
version = "0.1.0"
description = "Transformer LM built from scratch (pretokenization onward)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "torch>=2.0",
  "regex>=2023.0",
  "datasets>=2.14",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_llm*"]
